--- a/mukera.html
+++ b/mukera.html
@@ -10,5 +10,6 @@
     <h1>helooooooo</h1>
     <p>try to change some of the </p>
     <script src="script.js"></script>
+    <well done Moges I will pay you $9000 per month. are you confort with that?>
 </body>
 </html>
