--- a/mukera.html
+++ b/mukera.html
@@ -9,6 +9,7 @@
 <body>
     <h1>helooooooo</h1>
     <p>try to change some of the </p>
+    <p>Hi web Developer </p>
     <script src="script.js"></script>
     <well done Moges I will pay you $9000 per month. are you confort with that?>
 </body>
